fixed landscape mode white space & added black-box

--- a/css/motivations.css
+++ b/css/motivations.css
@@ -47,18 +47,37 @@ body{
 
 /*Rotate alert*/
 #rotate-warning {
+    font-size: 2.5rem;
     background-color: red;
     border-color: red;
     color: white;
-    width: 50%;
+    width: 75%;
     height: fit-content;
+    position:absolute;
     top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -100px;
+    left: 25%;
     transform: rotate(90deg);
-    z-index:1;
+    z-index:50;
 }
+
+.alert-dismissible .btn-close {
+    left:0;
+}
+
+#warning-text {
+    margin-left:3.5rem;
+}
+
+#black-box {
+    /* display: none; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 90%;
+    z-index: 10;
+}
+
 
 /*SVG*/
 svg#viz-motivations {
@@ -330,7 +349,6 @@ a.btn.btn-sm {
 
     #motivations-heading {
         font-size: 3rem;
-        white-space: nowrap!important;
     }
 
     #frame-motivations {
@@ -399,4 +417,17 @@ a.btn.btn-sm {
         height: calc(100vh - 560px);
         overflow: scroll;
     }
+}
+
+
+@media (orientation: landscape) {
+    #viz-container {
+        height:100%;
+    }
+
+    #motivations-content, #cost-content {
+        height: calc(100vw - 560px);
+        overflow: scroll;
+    }
+
 }
